refactor(basic-3.4): update tag selectors

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.page {
     background-color: #f8f8f8;
     color: #333;
     font-family: Lato, sans-serif;
@@ -38,7 +38,7 @@ ul {
     margin:0;
     padding: 0px;
 }
-li, h3 {
+.task-li, .section-title {
     list-style:none;
 }
 input,button{
@@ -57,7 +57,7 @@ button:hover {
     color: #3a3a3a;
 }
 /* Heading */
-h3,
+.section-title,
 label[for="new-task"] {
     color: #333;
     font-weight: 700;
@@ -93,7 +93,7 @@ input#new-task {
 }
 
 /* Task list */
-li {
+.task-li {
     overflow: hidden;
     padding: 20px 0;
     border-bottom: 1px solid #eee;
@@ -102,20 +102,20 @@ li {
     justify-content: space-between;
     align-items: center;
 }
-li > * {
+.task-li > * {
     vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.task-li > input[type="checkbox"] {
     margin: 0 10px;
 }
-li > label {
+.task-li > label {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
 }
-li >    input[type="text"] {
+.task-li >    input[type="text"] {
     width: 226px
 }
 button.delete-btn img {
@@ -134,15 +134,15 @@ ul#completed-tasks label {
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.editing{
     display:none
 }
 
-ul li.edit-mode input[type=text] {
+.edit-mode .editing {
     display:inline-block;
     width:224px
 }
 
-ul li.edit-mode label {
+.edit-mode label {
     display:none;
 }
