--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
 .task {
     width: 56%;
     display: inline-block;
-    flex-grow: 1
+    flex-grow: 1;
 }
 .add-task {
     display: flex;
@@ -116,7 +116,7 @@ input#new-task {
     width: 226px;
 }
 .task-li > input[type="text"] {
-    width: 226px
+    width: 226px;
 }
 button.delete-btn img {
     height: 2em;
@@ -129,18 +129,18 @@ button.delete-btn img:hover {
 
 /* Completed */
 ul#completed-tasks label {
-    text-decoration: line-through
+    text-decoration: line-through;
     color: #888;
 }
 
 /* Edit Task */
 .editing {
-    display: none
+    display: none;
 }
 
 .edit-mode .editing {
     display: inline-block;
-    width: 224px
+    width: 224px;
 }
 
 .edit-mode label {
