--- a/style.css
+++ b/style.css
@@ -39,10 +39,12 @@ ul {
     margin: 0;
     padding: 0px;
 }
-.task-li, .section-title {
+.task-li, 
+.section-title {
     list-style: none;
 }
-input,button{
+input,
+button{
     outline: none;
 }
 button {
