--- a/style.css
+++ b/style.css
@@ -13,10 +13,9 @@
 .header img {
     width: 100%;
 }
-.header .more-inf {
+.header .header__info{
     font-family: fantasy, cursive;
 }
-
 @media (max-width: 768px) {
     .header { 
         text-align: center;
@@ -27,27 +26,25 @@
     width: 500px;
     margin: 0 auto 0;
 }
-/* .task {
+.task {
     width: 56%;
     display: inline-block;
     flex-grow: 1;
-} */
-.task-wrapper {
+}
+.main__container__add-task {
     display: flex;
 }
 ul {
     margin: 0;
     padding: 0px;
 }
-li, 
-h3 {
+.main__incomplete__task-li, .section__title {
     list-style: none;
 }
-input,
-button{
+input,button{
     outline: none;
 }
-.btn-primary {
+button {
     background: none;
     border: 0px;
     color: #888;
@@ -56,11 +53,12 @@ button{
     font-family: Lato, sans-serif;
     cursor: pointer;
 }
-.btn-primary:hover {
+button:hover {
     color: #3a3a3a;
 }
 /* Heading */
-.section-title {
+.section__title,
+label[for="new-task"] {
     color: #333;
     font-weight: 700;
     font-size: 15px;
@@ -69,10 +67,7 @@ button{
     margin: 0;
     text-transform: uppercase;
 }
-.input-field {
-    width: 56%;
-    display: inline-block;
-    flex-grow: 1;
+input[type="text"] {
     margin: 0;
     font-size: 18px;
     line-height: 18px;
@@ -84,21 +79,19 @@ button{
     font-family: Lato, sans-serif;
     color: #888;
 }
-.input-field:focus {
+input[type="text"]:focus {
     color: #333;
 }
-
 /* New Task */
-.add-task__label {
+label[for="new-task"] {
     display: block;
     margin: 0 0 20px;
 }
-.add-task .input-field {
+input#new-task {
     width: 318px;
 }
-
 /* Task list */
-.tasks-list__item {
+.main__incomplete__task-li, .main__completed__task-li {
     overflow: hidden;
     padding: 20px 0;
     border-bottom: 1px solid #eee;
@@ -106,20 +99,19 @@ button{
     justify-content: space-between;
     align-items: center;
 }
-.tasks-list__item > * {
+.main__incomplete__task-li > *, .main__completed__task-li > * {
     vertical-align: middle;
 }
-
-.tasks-list__checkbox {
+.main__incomplete__task-li> input[type="checkbox"], .main__completed__task-li > input[type="checkbox"] {
     margin: 0 10px;
 }
-.tasks-list__label {
+.main__incomplete__task-li > label, .main__completed__task-li > label {
     padding-left: 10px;
     box-sizing: border-box;
     font-size: 18px;
     width: 226px;
 }
-.tasks-list__input {
+.main__incomplete__task-li > input[type="text"], .main__completed__task-li > input[type="text"] {
     width: 226px;
 }
 button.delete-btn img {
@@ -130,23 +122,19 @@ button.delete-btn img {
 button.delete-btn img:hover {
     transform: rotateZ(0);
 }
-
 /* Completed */
-.task--completed .tasks-list__label {
+.main__completed {
     text-decoration: line-through;
     color: #888;
 }
-
 /* Edit Task */
-.tasks-list .input-field {
+.editing {
     display: none;
 }
-
-.edit--mode .input-field {
+.edit-mode .editing {
     display: inline-block;
     width: 224px;
 }
-
-.edit--mode .tasks-list__label {
+.edit-mode label {
     display: none;
 }
