--- a/style.css
+++ b/style.css
@@ -34,14 +34,18 @@
 .main__container__add-task {
     display: flex;
 }
-ul {
+.main__completed,
+.main__incomplete {
     margin: 0;
     padding: 0px;
 }
-.main__incomplete__task-li, .section__title {
+.main__incomplete__task-li, .section__title,
+.header {
     list-style: none;
 }
-input,button{
+input,
+.edit-btn,
+.delete-btn{
     outline: none;
 }
 button {
@@ -87,7 +91,7 @@ label[for="new-task"] {
     display: block;
     margin: 0 0 20px;
 }
-input#new-task {
+#new-task {
     width: 318px;
 }
 /* Task list */
@@ -114,12 +118,12 @@ input#new-task {
 .main__incomplete__task-li > input[type="text"], .main__completed__task-li > input[type="text"] {
     width: 226px;
 }
-button.delete-btn img {
+.delete-btn img {
     height: 2em;
     transform: rotateZ(45deg);
     transition: transform 200ms ease-in;
 }
-button.delete-btn img:hover {
+.delete-btn img:hover {
     transform: rotateZ(0);
 }
 /* Completed */
